--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
-    "name": "WarcraftSuits",
+    "name": "FlashSuits",
     "version_number": "1.0.0",
-    "website_url": "https://github.com/ZachPlatypus/WarcraftSuits",
-    "description": "Adds looks from World of Warcraft to Lethal Company. Requires x753's More Suits",
+    "website_url": "https://github.com/ZachPlatypus/FlashSuits",
+    "description": "Adds The Flash and Reverse Flash to Lethal Company. Requires x753's More Suits",
     "dependencies": [
         "BepInEx-BepInExPack-5.4.2100",
         "x753-More_Suits-1.4.1"
